<resources>
    <string name="app_name">AnunciosLoc</string>
    <string name="profile_info_label">Informações do Perfil</string>
    <string name="profile_page_title">Perfil</string>
    <string name="username_label">Catarina Correia</string>
    <string name="usermail_label">catarina@gmail.com</string>
    <string name="app_logo">App logo</string>
    <string name="btnSignIn">Entrar</string>
    <string name="btnRegister">Registar-se</string>
    <string name="btnLogin">Entrar</string>
    <string name="sign_up">Criar Conta</string>
    <string name="loginTitle">Entre na sua Conta</string>
    <string name="login">Entrar</string>
    <string name="linkSignUp">Ainda não tem uma conta? Inscrever-se</string>
    <string name="email">Usuário*</string>
    <string name="password">Palavra-passe*</string>
    <string name="SignUpTitle">Crie uma conta</string>
    <string name="emailSignUp">Usuário*</string>
    <string name="passwordSignUp">Palavra-passe*</string>
    <string name="confirmPasswordSignUp">Confirmar Palavra-passe*</string>
    <string name="linkSignIn">Ao se inscrever nesse aplicativo, vocce também concorda nossos Termos de Serviço e Política de Privacidade.</string>


    <string name="gestaoMensagem">Gestão de Mensagens</string>
    <string name="btnPublicadas">Mensagens Publicadas</string>
    <string name="btnRecebidas">Mensagens Recebidas</string>


    <string name="mensagemPartilhadas">Mensagens Partilhadas</string>
    <string name="btnMensagensSalvas">Mensagens Salvas</string>
    <string name="mapaLocalizacao">Mapas de Localização</string>

    <!-- Lista de locais -->
    <string-array name="locais">
        <item>Selecionar um local</item>
        <item>Luanda</item>
        <item>Benguela</item>
        <item>Huambo</item>
        <item>Lubango</item>
        <item>Malanje</item>
    </string-array>


</resources>