<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/anuncio_logo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="-11dp" />

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="394dp"
            android:layout_height="376dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/mobile_marketing" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="283dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/yellow"
            android:elevation="3dp"
            android:paddingVertical="10dp"
            android:text="@string/btnLogin"
            android:textAllCaps="false"
            android:textColor="@color/red"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="588dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="283dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/yellow"
            android:elevation="3dp"
            android:paddingVertical="10dp"
            android:text="@string/btnRegister"
            android:textAllCaps="false"
            android:textColor="@color/red"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="645dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
