<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Imagem principal -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="158dp">

                <ImageView
                    android:id="@+id/logoImage"
                    android:layout_width="65dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/app_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/anuncio_logo"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/logoutImage"
                    android:layout_width="30dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/app_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/logout"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/btnDescentralizado"
                    android:layout_width="170dp"
                    android:layout_height="49dp"
                    android:backgroundTint="@color/yellowTransparente"
                    android:text="Descentralizado"
                    android:textColor="@color/red"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="197dp"
                    tools:layout_editor_absoluteY="93dp" />

                <Button
                    android:id="@+id/btnCentralizado"
                    android:layout_width="173dp"
                    android:layout_height="49dp"
                    android:backgroundTint="@color/yellow"
                    android:text="Centralizado"
                    android:textColor="@color/red"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="93dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"/>

                <GridLayout
                    android:id="@+id/gridMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <!-- 🔴 CARD 1: LOCAIS -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp"
                        app:strokeColor="#F44336"
                        app:strokeWidth="1dp"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iconLocal"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/ic_location"
                                app:tint="@color/red" />

                            <TextView
                                android:id="@+id/textLocal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Locais"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginTop="8dp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- 🔴 CARD 2: ANÚNCIOS -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp"
                        app:strokeColor="#F44336"
                        app:strokeWidth="1dp"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iconAds"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/megaphone"/>


                            <TextView
                                android:id="@+id/textAds"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Anúncios"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginTop="8dp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- 🔴 CARD 3: PERFIL -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp"
                        app:strokeColor="#F44336"
                        app:strokeWidth="1dp"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iconProfile"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/profile" />

                            <TextView
                                android:id="@+id/textProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Perfil"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginTop="8dp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <!-- 🔴 CARD 4: NOTIFICAÇÕES -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp"
                        app:strokeColor="#F44336"
                        app:strokeWidth="1dp"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iconNotification"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/notification" />

                            <TextView
                                android:id="@+id/textNotification"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Notificação"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginTop="8dp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </GridLayout>

                <!-- 🟡 2. GESTÃO DE MENSAGENS -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="3dp"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="#ffffff"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/gestaoMensagem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gestaoMensagem"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnPublicadas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnPublicadas"
                            android:textAllCaps="false"
                            android:backgroundTint="@color/yellowTransparente"
                            android:textColor="@color/black"
                            app:icon="@drawable/share"
                            app:iconGravity="start"
                            app:iconSize="30dp"
                            app:iconPadding="8dp"
                            app:iconTint="@color/red"
                            android:textAlignment="textStart"
                            android:padding="10dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnRecebidas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnRecebidas"
                            android:textAllCaps="false"
                            android:backgroundTint="@color/yellowTransparente"
                            android:textColor="@color/black"
                            app:icon="@drawable/receivemail"
                            app:iconGravity="start"
                            app:iconSize="30dp"
                            app:iconPadding="8dp"
                            app:iconTint="@color/red"
                            android:textAlignment="textStart"
                            android:padding="10dp" />


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!--&lt;!&ndash; 🟠 3. MENSAGENS PARTILHADAS -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="3dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/white"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/mensagemPartilhadas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mensagemPartilhadas"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnMensagensSalvas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnMensagensSalvas"
                            android:textAllCaps="false"
                            android:backgroundTint="@color/yellowTransparente"
                            android:textColor="@color/black"
                            app:icon="@drawable/save"
                            app:iconGravity="start"
                            app:iconSize="30dp"
                            app:iconPadding="8dp"
                            app:iconTint="@color/red"
                            android:textAlignment="textStart"
                            android:padding="10dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- 🟢 4. MAPA DE LOCALIZAÇÃO -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="3dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/mapaLocalizacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mapaLocalizacao"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:text="Sua posição inicial e anúncio próximo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginBottom="8dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/mapa" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>